1.21.1 to 26.1.2対応