@@ -24,12 +24,11 @@
 
 package techreborn.items;
 
+import reborncore.common.crafting.RebornRecipe;
 import reborncore.common.crafting.RecipeUtils;
 import reborncore.common.util.WorldUtils;
 import techreborn.init.ModRecipes;
-import techreborn.init.TRContent;
 import techreborn.init.TRItemSettings;
-import techreborn.recipe.recipes.ScrapBoxRecipe;
 
 import java.util.List;
 import net.minecraft.world.InteractionHand;
@@ -48,18 +47,13 @@ public class ScrapBoxItem extends Item {
 	@Override
 	public InteractionResult use(Level world, Player player, InteractionHand hand) {
 		ItemStack stack = player.getItemInHand(hand);
-		if (stack.is(TRContent.SCRAP_BOX)) {
-			if (world.isClientSide()) {
-				return InteractionResult.SUCCESS;
-			}
-			List<ScrapBoxRecipe> scrapboxRecipeList = RecipeUtils.getRecipes(world, ModRecipes.SCRAPBOX);
+		if (!world.isClientSide()) {
+			List<RebornRecipe> scrapboxRecipeList = RecipeUtils.getRecipes(world, ModRecipes.SCRAPBOX);
 			int random = world.getRandom().nextInt(scrapboxRecipeList.size());
-			ItemStack out = scrapboxRecipeList.get(random).outputs().get(0).create();
+			ItemStack out = scrapboxRecipeList.get(random).outputs().getFirst().create();
 			WorldUtils.dropItem(out, world, player.blockPosition());
-			ItemStack copy = stack.copy();
-			copy.shrink(1);
-			return InteractionResult.SUCCESS.heldItemTransformedTo(copy);
+			stack.shrink(1);
 		}
-		return InteractionResult.PASS;
+		return InteractionResult.SUCCESS;
 	}
 }
